crates/sdtm-report/tests/snapshots/sas_program__generate_sas_program_with_custom_datasets.snap
---
source: crates/sdtm-report/tests/sas_program.rs
assertion_line: 180
expression: program
---
/* Generated by CDISC Transpiler */
/* Domain: AE */

DATA sdtm.ae;
    SET source.ae_raw;
    length
        STUDYID $7
        DOMAIN $2
        USUBJID $11
        AESEQ 8
        AETERM $8
        AEDECOD $8
        AESTDTC $10
    ;

    /* Column mappings */
    USUBJID = upcase(strip(coalescec(subject_id, '')));
    AETERM = strip(coalescec(adverse_event, ''));
    AEDECOD = upcase(strip(coalescec(upcase(event_code), '')));
    AESTDTC = strip(coalescec(start_date, ''));

    /* Defaulted required fields */
    STUDYID = '';
    DOMAIN = '';
    AESEQ = .;
    STUDYID = "STUDY01";
    DOMAIN = "AE";

    KEEP STUDYID DOMAIN USUBJID AESEQ AETERM AEDECOD AESTDTC;
RUN;
